@@ -19,9 +19,9 @@ import (
     "os"
     "sync"
 
-    "github.com/google/gopacket"
-    "github.com/google/gopacket/layers"
-    "github.com/google/gopacket/pcapgo"
+    "github.com/fako1024/gopacket"
+    "github.com/fako1024/gopacket/layers"
+    "github.com/fako1024/gopacket/pcapgo"
 )
 
 type PacketLogWriter struct {
