@@ -17,8 +17,8 @@ package goProbe
 import (
 	"fmt"
 
-	"github.com/google/gopacket"
-	"github.com/google/gopacket/layers"
+	"github.com/fako1024/gopacket"
+	"github.com/fako1024/gopacket/layers"
 )
 
 var (
